fix list members meet if not ticket id + update form my profil and typo

--- a/src/app/components/password-form/password-form.component.html
+++ b/src/app/components/password-form/password-form.component.html
@@ -23,7 +23,7 @@
                 <p-inputIcon
                     class="cursor-pointer text-4xl"
                     (click)="hide1 = !hide1"
-                    [styleClass]="hide ? 'pi pi-eye' : 'pi pi-eye-slash'"
+                    [styleClass]="hide1 ? 'pi pi-eye' : 'pi pi-eye-slash'"
                 />
                 <input
                     pInputText
@@ -40,6 +40,7 @@
         <div class="p-col-12 p-md-10">
             <button
                 pButton
+                [disabled]="!valid"
                 (click)="submit()"
                 type="button"
                 label="Modifier le mot de passe"
