--- a/src/app/components/list-members-meet/list-members-meet.component.html
+++ b/src/app/components/list-members-meet/list-members-meet.component.html
@@ -9,7 +9,7 @@
 >
     <div class="dialog-content">
         <div class="summary">
-            <span
+            <span *ngIf="hasTicket"
                 >{{ total }} acheté{{ total > 1 ? 's' : '' }} - {{ waitingTotal }} en attente{{
                     waitingTotal > 1 ? 's' : ''
                 }}</span
