--- a/src/app/components/meet-participants/meet-participants.component.html
+++ b/src/app/components/meet-participants/meet-participants.component.html
@@ -88,8 +88,9 @@
     [style]="{ width: '25rem' }"
 >
     <span class="p-text-secondary block mb-5"
-        >Êtes vous sur de vouloir quitter ce meet ? Si vous avez payé votre billet, celui-ci vous
-        sera remboursé en intégralité</span
+        >Êtes vous sur de vouloir quitter ce meet ? Si vous avez payé votre billet enregistré pour
+        le meet, celui-ci vous sera remboursé en intégralité. (Les billets achetés hors du billet
+        intégré pour le meet ne seront pas remboursés)</span
     >
     <div class="flex justify-content-end gap-2">
         <p-button label="Non" severity="secondary" (click)="visibleLeaveMeet = false" />
