--- a/src/app/pages/pois-accounts-backoffice-page/pois-accounts-backoffice-page.component.html
+++ b/src/app/pages/pois-accounts-backoffice-page/pois-accounts-backoffice-page.component.html
@@ -7,7 +7,7 @@
                 class="w-full"
                 [(ngModel)]="search"
                 (input)="debouncedSearch()"
-                placeholder="Rechercher par username, nom d'utilisateur"
+                placeholder="Rechercher par poi"
             />
         </div>
         <div class="w-1/5 ml-5">
