add remove file chosen create post

--- a/src/app/components/city-card/city-card.component.html
+++ b/src/app/components/city-card/city-card.component.html
@@ -18,7 +18,7 @@
                     class="absolute object-cover rounded-md"
                     fill
                 />
-                <div class="spinner" *ngIf="loadingImage">Loading...</div>
+                <div class="spinner" *ngIf="loadingImage">Chargement...</div>
             </div>
         </ng-template>
         <div class="flex flex-col gap-3">
