--- a/src/app/components/currently-at-card/currently-at-card.component.html
+++ b/src/app/components/currently-at-card/currently-at-card.component.html
@@ -20,5 +20,5 @@
         (load)="isLoadingImage = false"
         (error)="isLoadingImage = false"
     />
-    <div class="spinner" *ngIf="isLoadingImage">Loading...</div>
+    <div class="spinner" *ngIf="isLoadingImage">Chargement...</div>
 </div>
