--- a/src/app/components/monument-card/monument-card.component.html
+++ b/src/app/components/monument-card/monument-card.component.html
@@ -18,7 +18,7 @@
                     (error)="loadingImage = false"
                     fill
                 />
-                <div class="spinner" *ngIf="loadingImage">Loading...</div>
+                <div class="spinner" *ngIf="loadingImage">Chargement...</div>
             </div>
         </ng-template>
         <div class="flex flex-col gap-3">
