--- a/src/app/components/password-form/password-form.component.html
+++ b/src/app/components/password-form/password-form.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div>
     <form>
         <div class="flex flex-row gap-10">
@@ -40,7 +41,7 @@
         <div class="p-col-12 p-md-10">
             <button
                 pButton
-                [disabled]="!valid"
+                [disabled]="!valid || isLoading"
                 (click)="submit()"
                 type="button"
                 label="Modifier le mot de passe"
@@ -48,4 +49,9 @@
             ></button>
         </div>
     </form>
+    <p-progressBar
+        mode="indeterminate"
+        *ngIf="isLoading"
+        [style]="{ height: '6px', width: '100%' }"
+    ></p-progressBar>
 </div>
