fix banner cursor pointer and remove google connect button login and register

--- a/src/app/components/banner-user/banner-user.component.html
+++ b/src/app/components/banner-user/banner-user.component.html
@@ -1,8 +1,1 @@
-<img
-    *ngIf="banner"
-    [ngSrc]="banner"
-    fill
-    class="absolute object-cover cursor-pointer"
-    alt="banner"
-    priority
-/>
+<img *ngIf="banner" [ngSrc]="banner" fill class="absolute object-cover" alt="banner" priority />
