--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -12,8 +12,8 @@
         </div>
         <div class="p-card-body">
             <h3 class="p-text-center !text-3xl font-bold">Bon retour parmi nous ! 👋</h3>
-            <p class="p-text-center !text-lg">Continue avec Google ou entre tes infos.</p>
-            <div class="p-d-flex p-jc-center p-mb-3">
+            <p class="p-text-center !text-lg">Entre tes infos pour continuer.</p>
+            <!--            <div class="p-d-flex p-jc-center p-mb-3">
                 <button
                     pButton
                     class="p-button-rounded p-button-secondary p-button-outlined"
@@ -21,7 +21,7 @@
                     label="Continuer avec Google"
                 ></button>
             </div>
-            <hr />
+            <hr />-->
             <form>
                 <div class="p-field p-mb-3">
                     <input
