--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -13,7 +13,7 @@
         <div class="p-card-body">
             <h3 class="p-text-center !text-3xl font-bold">Prêt à monter à bord ? 👋</h3>
             <p class="p-text-center !text-lg">Entre tes infos pour créer ton compte Tripmemories</p>
-            <div class="p-d-flex p-jc-center p-mb-3">
+            <!--            <div class="p-d-flex p-jc-center p-mb-3">
                 <button
                     pButton
                     class="p-button-rounded p-button-secondary p-button-outlined"
@@ -21,7 +21,7 @@
                     label="Continuer avec Google"
                 ></button>
             </div>
-            <hr />
+            <hr />-->
             <form>
                 <div class="p-field p-mb-3">
                     <input
