--- a/src/app/components/banner-profil/banner-profil.component.html
+++ b/src/app/components/banner-profil/banner-profil.component.html
@@ -4,7 +4,7 @@
             *ngIf="banner"
             [ngSrc]="banner"
             fill
-            class="absolute object-cover cursor-pointer"
+            class="absolute object-cover"
             alt="banner"
             priority
         />
