--- a/src/app/components/password-form/password-form.component.html
+++ b/src/app/components/password-form/password-form.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div>
     <form>
         <div class="flex flex-row gap-10">
@@ -23,7 +24,7 @@
                 <p-inputIcon
                     class="cursor-pointer text-4xl"
                     (click)="hide1 = !hide1"
-                    [styleClass]="hide ? 'pi pi-eye' : 'pi pi-eye-slash'"
+                    [styleClass]="hide1 ? 'pi pi-eye' : 'pi pi-eye-slash'"
                 />
                 <input
                     pInputText
@@ -40,6 +41,7 @@
         <div class="p-col-12 p-md-10">
             <button
                 pButton
+                [disabled]="!valid || isLoading"
                 (click)="submit()"
                 type="button"
                 label="Modifier le mot de passe"
@@ -47,4 +49,9 @@
             ></button>
         </div>
     </form>
+    <p-progressBar
+        mode="indeterminate"
+        *ngIf="isLoading"
+        [style]="{ height: '6px', width: '100%' }"
+    ></p-progressBar>
 </div>
