--- a/src/app/components/personal-data-form/personal-data-form.component.html
+++ b/src/app/components/personal-data-form/personal-data-form.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div>
     <form>
         <div class="flex flex-row gap-10">
@@ -59,6 +60,7 @@
         <div class="p-col-12 p-md-10">
             <button
                 pButton
+                [disabled]="!valid || isLoading"
                 (click)="submit()"
                 type="button"
                 label="Modifier les informations"
@@ -66,4 +68,9 @@
             ></button>
         </div>
     </form>
+    <p-progressBar
+        mode="indeterminate"
+        *ngIf="isLoading"
+        [style]="{ height: '6px', width: '100%' }"
+    ></p-progressBar>
 </div>
