--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -3,8 +3,20 @@
         <p class="title-poi text-center z-10 absolute">
             {{ poi.name }}
         </p>
+        <div *ngIf="widthImage < heightImage" class="h-full w-[600px] relative">
+            <img
+                class="z-0 absolute object-cover"
+                [ngSrc]="
+                    poi.cover?.url ??
+                    'https://decizia.com/blog/wp-content/uploads/2017/06/default-placeholder.png'
+                "
+                alt="{{ poi.name }}"
+                fill
+            />
+        </div>
         <img
-            class="z-0 {{ widthImage > heightImage ? '' : 'max-w-none max-h-full' }}"
+            *ngIf="widthImage > heightImage"
+            class="z-0"
             [src]="
                 poi.cover?.url ??
                 'https://decizia.com/blog/wp-content/uploads/2017/06/default-placeholder.png'
@@ -14,18 +26,46 @@
             height="{{ heightImage }}"
         />
     </div>
-    <div class="p-9 flex {{ widthImage > heightImage ? 'flex-col' : 'flex-row gap-12' }}">
-        <div class="flex flex-col justify-center items-center gap-6">
+    <div class="p-9 flex flex-col">
+        <div
+            [ngClass]="{
+                'basis-9 shrink grow': widthImage < heightImage,
+                'w-full': widthImage > heightImage
+            }"
+            class="flex flex-col justify-center items-center gap-6 relative"
+        >
             <h2 class="text-6xl text-[var(--primary)] font-bold font-['Urbanist']">
                 {{ poi.name }}
             </h2>
+            <div class="flex flex-row gap-2 absolute right-2 top-2">
+                <button
+                    *ngIf="nbrQuestions > 0"
+                    pButton
+                    class="p-button-rounded p-button-primary p-button-outlined"
+                    label="Démarrer un quiz sur ce lieu"
+                    (click)="openDialogQuiz()"
+                ></button>
+                <button
+                    pButton
+                    class="p-button-rounded p-button-primary p-button-outlined"
+                    label="Créer un meet (rencontre) pour ce lieu"
+                    *ngIf="!isSameId"
+                    (click)="openDialogMeet()"
+                ></button>
+            </div>
             <h4 class="font-['Urbanist'] text-[#5B5B5B] text-xl">
                 {{ poi.city?.name
                 }}<span class="text-xs">&nbsp;&nbsp;{{ poi.address }} {{ poi.city?.zipCode }}</span>
             </h4>
             <p class="font-['Urbanist'] font-semibold leading-10">{{ poi.description }}</p>
         </div>
-        <div class="mt-10">
+        <div
+            [ngClass]="{
+                'basis-9  shrink grow': widthImage < heightImage,
+                'w-full': widthImage > heightImage
+            }"
+            class="mt-10"
+        >
             <div class="flex flex-row justify-between mb-10">
                 <h3 class="text-4xl font-bold font-['Urbanist']">
                     Les derniers posts du point d'intérêt "{{ poi.name }}"
@@ -35,20 +75,8 @@
                         pButton
                         class="p-button-rounded p-button-primary p-button-outlined"
                         label="Créer un memories sur ce lieu"
+                        *ngIf="!isSameId"
                         (click)="openDialog()"
-                    ></button>
-                    <button
-                        *ngIf="nbrQuestions > 0"
-                        pButton
-                        class="p-button-rounded p-button-primary p-button-outlined"
-                        label="Démarrer un quiz sur ce lieu"
-                        (click)="openDialogQuiz()"
-                    ></button>
-                    <button
-                        pButton
-                        class="p-button-rounded p-button-primary p-button-outlined"
-                        label="Créer un meet (rencontre) pour ce lieu"
-                        (click)="openDialogMeet()"
                     ></button>
                 </div>
             </div>
@@ -67,7 +95,14 @@
                 Aucun post pour le moment</span
             >
         </div>
-        <div *ngIf="tickets.length > 0" class="mt-16">
+        <div
+            [ngClass]="{
+                'basis-9 shrink grow': widthImage < heightImage,
+                'w-full': widthImage > heightImage
+            }"
+            *ngIf="tickets.length > 0"
+            class="mt-16"
+        >
             <div class="flex flex-row justify-between">
                 <h3 class="text-4xl font-bold font-['Urbanist']">
                     Acheter des billets pour {{ poi.name }}
@@ -109,7 +144,13 @@
                 ></app-buy-ticket-poi-card>
             </div>
         </div>
-        <div class="mt-16">
+        <div
+            [ngClass]="{
+                'basis-9 shrink grow': widthImage < heightImage,
+                'w-full': widthImage > heightImage
+            }"
+            class="mt-16"
+        >
             <div class="flex flex-row justify-between">
                 <h3 class="text-4xl font-bold font-['Urbanist']">
                     Les meets disponible pour "{{ poi.name }}"
@@ -170,25 +211,37 @@
                 Aucun Meet actuellement, soyez le premier à en créer un</span
             >
         </div>
-        <div class="mt-16">
+        <div
+            [ngClass]="{
+                'basis-9 shrink grow': widthImage < heightImage,
+                'w-full': widthImage > heightImage
+            }"
+            class="mt-16"
+        >
             <div class="flex flex-row justify-between">
                 <h3 class="text-4xl font-bold font-['Urbanist']">Les missions disponibles</h3>
             </div>
             <div class="flex flex-row flex-nowrap gap-10 overflow-x-auto post-scrollbar p-4">
                 <app-my-mission-card
-                    *ngFor="let quest of quests"
+                    *ngFor="let quest of quests; index as i"
                     [quest]="quest"
                     [isPoi]="false"
                     [done]="quest.done"
+                    [questNbr]="i + 1"
                 ></app-my-mission-card>
             </div>
-            <span *ngIf="meets.length === 0" class="text-2xl text-red-500 font-['Urbanist'] mt-6">
+            <span *ngIf="quests.length === 0" class="text-2xl text-red-500 font-['Urbanist'] mt-6">
                 Aucune missions n'est disponibles pour le moment, patience cela peut arriver très
                 vite</span
             >
         </div>
-
-        <div class="mt-16">
+        <div
+            [ngClass]="{
+                'basis-9 shrink grow': widthImage < heightImage,
+                'w-full': widthImage > heightImage
+            }"
+            class="mt-16"
+        >
             <div class="flex flex-row justify-between">
                 <h3 class="text-4xl font-bold font-['Urbanist']">Autour de "{{ poi.name }}"</h3>
                 <div class="flex flex-row ml-auto gap-2">
@@ -253,7 +306,7 @@
     [modal]="true"
     [draggable]="false"
     [(visible)]="showDialog"
-    [style]="{ width: '50rem', borderRadius: '9999px' }"
+    [style]="{ width: '50rem', borderRadius: '9999px', height: '70rem' }"
     [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
 >
     <ng-template pTemplate="content">
