--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-row h-full">
-    <div class="flex-[40] h-screen relative">
-        <img ngSrc="assets/login/background_register.png" fill />
+<div class="flex flex-row min-h-screen">
+    <div class="flex-[40] relative">
+        <img ngSrc="assets/login/background_register.png" alt="s'inscrire" fill />
     </div>
     <div class="flex-[60]">
         <app-register-form></app-register-form>
