--- a/src/app/pages/shop-page/shop-page.component.html
+++ b/src/app/pages/shop-page/shop-page.component.html
@@ -5,7 +5,9 @@
     <button
         pButton
         label="Ajouter un billet"
-        class="p-button-rounded p-button-raised p-button-primary mb-10"
+        icon="pi pi-plus"
+        [outlined]="true"
+        class="p-button-rounded p-button-primary mb-10"
         (click)="visible = true"
     ></button>
     <div class="flex flex-row gap-6 flex-wrap justify-center">
