--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-row h-full">
-    <div class="flex-[40] h-screen relative">
-        <img ngSrc="assets/login/background_login.png" fill />
+<div class="flex flex-row min-h-screen">
+    <div class="flex-[40] relative">
+        <img ngSrc="assets/login/background_login.png" alt="se connecter" fill />
     </div>
     <div class="flex-[60]">
         <app-login-form></app-login-form>
