fix poi page, my mission card if not connected

--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -18,7 +18,7 @@
                 >Score de la partie: {{ score }} pts, Votre score total: {{ totalScore }} pts</span
             >
         </div>
-        <div class="category">
+        <!--        <div class="category">
             <span class="font-bold text-2xl">Timer</span>
             <p-progressBar
                 mode="determinate"
@@ -30,7 +30,7 @@
                     <span>{{ timer }} sec</span>
                 </ng-template>
             </p-progressBar>
-        </div>
+        </div>-->
         <div class="category">
             <div class="w-28 h-24 relative">
                 <img
