--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -37,22 +37,6 @@
             <h2 class="text-6xl text-[var(--primary)] font-bold font-['Urbanist']">
                 {{ poi.name }}
             </h2>
-            <div class="flex flex-row gap-2 absolute right-2 top-2">
-                <button
-                    *ngIf="nbrQuestions > 0"
-                    pButton
-                    class="p-button-rounded p-button-primary p-button-outlined"
-                    label="Démarrer un quiz sur ce lieu"
-                    (click)="openDialogQuiz()"
-                ></button>
-                <button
-                    pButton
-                    class="p-button-rounded p-button-primary p-button-outlined"
-                    label="Créer un meet (rencontre) pour ce lieu"
-                    *ngIf="!isSameId"
-                    (click)="openDialogMeet()"
-                ></button>
-            </div>
             <h4 class="font-['Urbanist'] text-[#5B5B5B] text-xl">
                 {{ poi.city?.name
                 }}<span class="text-xs">&nbsp;&nbsp;{{ poi.address }} {{ poi.city?.zipCode }}</span>
@@ -152,9 +136,20 @@
             class="mt-16"
         >
             <div class="flex flex-row justify-between">
-                <h3 class="text-4xl font-bold font-['Urbanist']">
-                    Les meets disponible pour "{{ poi.name }}"
-                </h3>
+                <div class="flex flex-row justify-between mb-10">
+                    <h3 class="text-4xl font-bold font-['Urbanist']">
+                        Les meets disponible pour "{{ poi.name }}"
+                    </h3>
+                    <div class="flex flex-row gap-2 ml-16">
+                        <button
+                            pButton
+                            class="p-button-rounded p-button-primary p-button-outlined"
+                            label="Créer un meet (rencontre)"
+                            *ngIf="!isSameId"
+                            (click)="openDialogMeet()"
+                        ></button>
+                    </div>
+                </div>
                 <div class="flex flex-row ml-auto gap-2">
                     <div
                         class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
@@ -220,14 +215,28 @@
         >
             <div class="flex flex-row justify-between">
                 <h3 class="text-4xl font-bold font-['Urbanist']">Les missions disponibles</h3>
+                <div class="flex flex-row gap-2">
+                    <button
+                        *ngIf="nbrQuestions > 0"
+                        pButton
+                        class="p-button-rounded p-button-primary p-button-outlined"
+                        label="Démarrer un quiz sur ce lieu"
+                        (click)="openDialogQuiz()"
+                    ></button>
+                </div>
             </div>
-            <div class="flex flex-row flex-nowrap gap-10 overflow-x-auto post-scrollbar p-4">
+            <div
+                #scrollContainerQuest
+                (scroll)="scrollPoiQuest($event)"
+                class="flex flex-row flex-nowrap gap-10 overflow-x-auto post-scrollbar p-4"
+            >
                 <app-my-mission-card
                     *ngFor="let quest of quests; index as i"
                     [quest]="quest"
                     [isPoi]="false"
                     [done]="quest.done"
                     [questNbr]="i + 1"
+                    [isConnect]="isConnect"
                 ></app-my-mission-card>
             </div>
             <span *ngIf="quests.length === 0" class="text-2xl text-red-500 font-['Urbanist'] mt-6">
