--- a/src/app/components/my-mission-card/my-mission-card.component.html
+++ b/src/app/components/my-mission-card/my-mission-card.component.html
@@ -26,7 +26,7 @@
                     <span class="text-[var(--primary)] font-semibold text-2xl">Jeux</span>
                 </div>
                 <div
-                    class="p-0.5 border-[1px] border-[var(--primary)] rounded-full text-[var(--primary)] flex flex-row gap-0.5"
+                    class="p-0.5 pl-2 pr-2 border-[1px] border-[var(--primary)] rounded-full text-[var(--primary)] flex flex-row gap-0.5"
                 >
                     <img ngSrc="assets/quest/Gift.png" alt="gift" width="20" height="20" />
                     <span class="ml-2">50 points</span>
@@ -56,7 +56,7 @@
                     (click)="visibleDelete = true"
                 ></button>
                 <span
-                    *ngIf="!isPoi"
+                    *ngIf="!isPoi && isConnect"
                     class="mb-2 mr-2"
                     [ngClass]="{
                         'status-finished': done,
